--- a/example/persona/index.html
+++ b/example/persona/index.html
@@ -74,7 +74,7 @@
          };
 
          connection.onclose = function () {
-            window.location.reload();
+            //window.location.reload();
          }
 
          connection.open();
