--- a/example/management/index.html
+++ b/example/management/index.html
@@ -7,6 +7,9 @@
       <h1>Authenticated WAMP with Mozilla Persona</h1>
       <p>Open JavaScript console to watch output.</p>
 
+      <button onclick="test_list_processes()">List Processes</button>
+      <button onclick="test_start_guest_1()">Start Guest 1</button>
+
 
       <script src="autobahn.min.js"></script>
 
@@ -25,6 +28,28 @@
 
             console.log("connected", session.id);
 
+            session.subscribe('crossbar.node.' + nodename + '.on_process_start',
+               function (args) {
+                  var process = args[0];
+                  console.log("process started", process);
+               });
+
+            session.subscribe('crossbar.node.' + nodename + '.on_process_exit',
+               function (args) {
+                  var process = args[0];
+                  console.log("process ended", process);
+               });
+         };
+
+         connection.onclose = function () {
+            //window.location.reload();
+            session = null;
+         }
+
+         connection.open();
+
+
+         function test_list_processes() {
             session.call('crossbar.node.' + nodename + '.list_processes').then(
                function (workers) {
                   workers.forEach(function (worker) {
@@ -34,38 +59,28 @@
                function (err) {
                   console.log(err.error, err.args[0]);
                }
-            );
-
-/*
-            var node_name = '918234';
-
-            session.call('crossbar.node.' + node_name + '.get_node_processes').then(
-//            session.call('crossbar.node.918234.start_process', [{type: 'worker'}]).then(
-               function (processes) {
-                  for (var i = 0; i < processes.length; ++i) {
-                     var pid = processes[i].pid;
-                     (function (pid) {
-                        session.call('crossbar.node.' + node_name + '.process.' + pid + '.get_cpu_affinity').then(
-                           function (affinity) {
-                              console.log(pid, affinity);
-                           }
-                        );
-                     })(pid);
-                  }
-               },
-               function (error) {
-                  console.log(error);
-               }
-            );
-*/            
-         };
-
-         connection.onclose = function () {
-            //window.location.reload();
-            session = null;
+            );            
          }
 
-         connection.open();
+         function test_start_guest_1() {
+
+            var config = {
+               type: 'guest',
+               executable: '/bin/ping',
+               arguments: ['-c', '5', 'www.google.com'],
+               stdout: 'log'
+            };
+
+            session.call('crossbar.node.' + nodename + '.start_guest', [config])
+               .then(
+                  function (pid) {
+                     console.log("guest worker started with PID", pid);
+                  },
+                  function (err) {
+                     console.log(err);
+                  }
+               );
+         }
       </script>
    </body>
 </html>
