--- a/example/management/index.html
+++ b/example/management/index.html
@@ -7,10 +7,37 @@
       <h1>Authenticated WAMP with Mozilla Persona</h1>
       <p>Open JavaScript console to watch output.</p>
 
-      <button onclick="test_list_processes()">List Processes</button>
-      <button onclick="test_list_wamplets()">List WAMPlets</button>
-      <button onclick="test_start_guest_1()">Start Guest 1</button>
+      <table>
+         <tr>
+            <td>Test listing all processes currently running on node.</td>
+            <td><button onclick="test_list_processes()">List Processes</button></td>
+         </tr>
 
+         <tr>
+            <td>Test listing all WAMPlets in the node environment.</td>
+            <td><button onclick="test_list_wamplets()">List WAMPlets</button></td>
+         </tr>
+
+         <tr>
+            <td>Test starting a guest worker on the node.</td>
+            <td><button onclick="test_start_guest_1()">Start Guest Test 1</button></td>
+         </tr>
+
+         <tr>
+            <td>Test starting a guest worker with invalid configuration.</td>
+            <td><button onclick="test_start_guest_2()">Start Guest Test 2</button></td>
+         </tr>
+
+         <tr>
+            <td>Test starting a guest worker with non-existent executable.</td>
+            <td><button onclick="test_start_guest_3()">Start Guest Test 3</button></td>
+         </tr>
+
+         <tr>
+            <td>Test starting a guest worker that fails at run time.</td>
+            <td><button onclick="test_start_guest_4()">Start Guest Test 4</button></td>
+         </tr>
+      </table>
 
       <script src="autobahn.min.js"></script>
 
@@ -61,7 +88,7 @@
                function (err) {
                   console.log(err.error, err.args[0]);
                }
-            );            
+            );
          }
 
          function test_list_wamplets() {
@@ -75,7 +102,7 @@
                function (err) {
                   console.log(err.error, err.args[0]);
                }
-            );            
+            );
          }
 
          function test_start_guest_1() {
@@ -94,6 +121,65 @@
                   },
                   function (err) {
                      console.log(err);
+                  }
+               );
+         }
+
+         function test_start_guest_2() {
+
+            var config = {
+               type: 'guest',
+               foobar: 23
+            };
+
+            session.call('crossbar.node.' + nodename + '.start_guest', [config])
+               .then(
+                  function (pid) {
+                     console.log("guest worker started with PID", pid);
+                  },
+                  function (err) {
+                     console.log(err.error);
+                     console.log(err.args[0]);
+                  }
+               );
+         }
+
+         function test_start_guest_3() {
+
+            var config = {
+               type: 'guest',
+               executable: '/bin/foobar',
+               arguments: []
+            };
+
+            session.call('crossbar.node.' + nodename + '.start_guest', [config])
+               .then(
+                  function (pid) {
+                     console.log("guest worker started with PID", pid);
+                  },
+                  function (err) {
+                     console.log(err.error);
+                     console.log(err.args[0]);
+                  }
+               );
+         }
+
+         function test_start_guest_4() {
+
+            var config = {
+               type: 'guest',
+               executable: '/bin/cat',
+               arguments: ['/etc/sudoers']
+            };
+
+            session.call('crossbar.node.' + nodename + '.start_guest', [config])
+               .then(
+                  function (pid) {
+                     console.log("guest worker started with PID", pid);
+                  },
+                  function (err) {
+                     console.log(err.error);
+                     console.log(err.args[0]);
                   }
                );
          }
